SOCIAL LINKS PROFILE: Fixed text alignment

--- a/social_links_profile/social-links-profile-main/solutions/styles.css
+++ b/social_links_profile/social-links-profile-main/solutions/styles.css
@@ -4,29 +4,64 @@
 
 /* Main Styles */
 
+/* Align Center */
+html,body {
+    height: 100vh;
+    margin: 0;
+    align-items: center;
+}
+
 body {
+    max-width: 1440px;
     font-family: 'Inter'; 
     background-color: #141414;
     color: #fff;
     display: flex;
     justify-content: center;
-
+    font-size: 14px;
+    line-height: 150%;
 }
 
 .cardContainer {
-    background-color: #1F1F1F;
-    border-radius: 0.75rem;
-    padding: 2rem;
-    margin: 4rem;
-    max-width: 1440px;
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 4rem;
+    padding: 2rem;
+    box-sizing: border-box;
+    background-color: #1F1F1F;
+    border-radius: 0.75rem;
 }
+
+/* Improve image size and spacing */
+
 
 .mainImg {
     border-radius: 100%;
-    
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 1rem auto; /* centering IMG using margin property values */
+}
+
+/* Text Styles */
+
+.name {
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+
+.location {
+    font-weight: bold;
+    color: #C4F82A;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.information {
+    font-weight: 300;
+    margin-bottom: 1rem;
 }
 
 ul{
